# website_blocker

./: .gitignore  Cargo.toml  com.aaron.dark-pattern.plist  config.toml  dark-pattern.db  dark-pattern.db-shm  dark-pattern.db-wal  database.db3  install.sh  tauri.conf.json
dark-pattern-extension/: README.md  manifest.json  notes.md
dark-pattern-extension/_locales/en/: messages.json
dark-pattern-extension/background/: native-messaging.js  request-blocker.js  service-worker.js  state.js
dark-pattern-extension/blocked/: blocked.css  blocked.html
dark-pattern-extension/content-scripts/facebook/: content.js  styles.css
dark-pattern-extension/content-scripts/facebook/css/: hide-gaming.css  hide-groups-btn.css  hide-marketplace.css  hide-messenger-btn.css  hide-meta-ai.css  hide-newsfeed.css  hide-notifications.css  hide-reels.css  hide-sponsored.css  hide-stories.css  hide-suggested.css  hide-watch.css
dark-pattern-extension/content-scripts/instagram/: content.js  styles.css
dark-pattern-extension/content-scripts/instagram/css/: hide-explore.css  hide-feed.css  hide-reels.css  hide-stories.css  hide-suggested.css  hide-vanity-metrics.css
dark-pattern-extension/content-scripts/linkedin/: content.js  styles.css
dark-pattern-extension/content-scripts/netflix/: content.js  styles.css
dark-pattern-extension/content-scripts/reddit/: content.js  styles.css
dark-pattern-extension/content-scripts/reddit/css/: hide-all.css  hide-comments.css  hide-communities.css  hide-community-highlights.css  hide-custom-feeds.css  hide-explore.css  hide-gallery.css  hide-games.css  hide-home-feed.css  hide-left-sidebar.css  hide-notifications.css  hide-popular-communities.css  hide-popular.css  hide-recent-posts.css  hide-recent-subreddits.css  hide-right-sidebar.css  hide-search.css  hide-subreddit-feed.css  hide-subreddit-info.css  hide-trending.css  hide-upvote-count.css  hide-upvotes.css
dark-pattern-extension/content-scripts/shared/: base.css  base.js
dark-pattern-extension/content-scripts/twitter/: content.js  styles.css
dark-pattern-extension/content-scripts/youtube/: content.js
dark-pattern-extension/content-scripts/youtube/css/: grayscale.css  hide-comments.css  hide-end-cards.css  hide-home-feed.css  hide-recommendations.css  hide-shorts.css
dark-pattern-extension/popup/: popup.css  popup.html  popup.js
dark-pattern-tauri/: README.md  client_additions.rs  index.html  package-lock.json  package.json  vite.config.ts
dark-pattern-tauri/src/: App.tsx
dark-pattern-tauri/src-tauri/: Cargo.toml  tauri.conf.json
dark-pattern-tauri/src-tauri/src/: commands.rs  main.rs
dark-pattern-tauri/src/components/: NewBlockModal.tsx  ScheduleModal.tsx
dark-pattern-tauri/src/hooks/: useDaemon.ts
new ui/src (1)/app/: App.tsx
new ui/src (1)/app/components/: NewBlockModal.tsx
src/: client.rs  commands.rs  daemon.rs  db.rs  format_duration.rs  fs.rs  host.rs  lib.rs  main.rs  parse_duration.rs  protocols.rs  session.rs  signal.rs  socket.rs
src/config/: config.rs  error.rs  mod.rs
ui/: index.html
website_blocker/: Cargo.toml
website_blocker/src/: fs.rs  host.rs  main.rs  parse_duration.rs  signal.rs
website_blocker/src/config/: config.rs  mod.rs  non_empty_vec.rs
