[package]
name = "dark_pattern_blocker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dark-pattern"
path = "src/main.rs"

[[bin]]
name = "dark-pattern-host"
path = "src/bin/native-host.rs"

[[bin]]
name = "dark-pattern-gui"
path = "src/bin/gui.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
regex = "1.12.3"
time-hms = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0.0"
rmp-serde = "1.3"
tokio = { version = "1.37", features = ["full"] }
tempfile = "3.10"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6"
futures = "0.3"
nix = { version = "0.28", features = ["signal"] }
anyhow = "1.0.101"
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-build"]
