[package]
name = "dark_pattern_blocker"
version = "0.1.0"
edition = "2021"

# Main CLI/daemon binary
[[bin]]
name = "dark-pattern"
path = "src/main.rs"

# Native messaging host for browser extension
[[bin]]
name = "dark-pattern-host"
path = "src/bin/native-host.rs"

# Tauri GUI binary (only built with "gui" feature)
[[bin]]
name = "dark-pattern-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.6"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
dirs = "6.0"

# Protocol
rmp-serde = "1.3"

# Time
chrono = "0.4"

# IDs
uuid = { version = "1", features = ["v4"] }

# Unix
nix = { version = "0.28", features = ["signal"] }

# Misc
regex = "1"
tempfile = "3"

# Tauri (optional, only for GUI)
tauri = { version = "2", features = [], optional = true }
time-hms = "0.3.1"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = []
gui = ["dep:tauri", "dep:tauri-build"]
